# MathXX

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json
src/: CMakeLists.txt
src/InfiniteNaturalNumbers/: CMakeLists.txt
src/InfiniteNaturalNumbers/include/InfiniteNaturalNumbers/: InfiniteNaturalNumbers.h
src/InfiniteNaturalNumbers/src/: InfiniteNaturalNumbers.cpp
src/InfiniteNaturalNumbers/test/: CMakeLists.txt  InfiniteNaturalNumbers.UnitTests.cpp
src/RealNumbers/: CMakeLists.txt
src/RealNumbers/test/: CMakeLists.txt
